--- a/Projeto-Churrasco/estilo.css
+++ b/Projeto-Churrasco/estilo.css
@@ -1,11 +1,42 @@
+*{
+    margin: 0;
+}
+
+body{
+    background: url(fundo.jpg);
+}
+
+/*#container-imagem{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    background: url(fundo.jpg);
+    background-size: cover;
+}*/
+
+
 .container{
+    font-family: Arial, Helvetica, sans-serif;
+    width: 70%;
+    background-color: rgb(173, 48, 48);
+    padding: 10px;
+    border-radius: 15px;
+    margin: auto;
+    margin-top: 30px;
+    color: aliceblue;
+}
+
+
+.container2{
     font-family: Arial, Helvetica, sans-serif;
     max-width: 300px;
     margin: auto;
-    background-color: rgb(192, 222, 248);
+    background-color: rgb(173, 48, 48);
     padding: 20px;
     border-radius: 15px;
     text-align: center;
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
 
 input{
@@ -19,5 +50,9 @@ input{
 
 button{
     padding: 5px;
+}
+
+p{
+    margin-top: 7px;
 }
 
